fixed sink integration tests