@@ -21,9 +21,9 @@ import static com.github.tomakehurst.wiremock.client.WireMock.aResponse;
 import static com.github.tomakehurst.wiremock.client.WireMock.request;
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.io.File;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
+import java.time.Duration;
 import java.time.ZoneId;
 import java.time.ZonedDateTime;
 import java.time.format.DateTimeFormatter;
@@ -37,7 +37,6 @@ import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Future;
 import java.util.stream.Collectors;
 
-import org.apache.kafka.clients.admin.AdminClient;
 import org.apache.kafka.clients.producer.KafkaProducer;
 import org.apache.kafka.clients.producer.ProducerConfig;
 import org.apache.kafka.clients.producer.ProducerRecord;
@@ -46,100 +45,33 @@ import org.apache.kafka.common.TopicPartition;
 
 import io.aiven.kafka.connect.common.config.CompressionType;
 import io.aiven.kafka.connect.s3.AivenKafkaConnectS3SinkConnector;
-import io.aiven.kafka.connect.s3.testutils.BucketAccessor;
 import io.aiven.kafka.connect.s3.testutils.IndexesToString;
 import io.aiven.kafka.connect.s3.testutils.KeyValueGenerator;
 import io.aiven.kafka.connect.s3.testutils.KeyValueMessage;
 
-import com.amazonaws.services.s3.AmazonS3;
 import com.github.tomakehurst.wiremock.WireMockServer;
 import com.github.tomakehurst.wiremock.core.WireMockConfiguration;
 import com.github.tomakehurst.wiremock.http.RequestMethod;
 import com.github.tomakehurst.wiremock.matching.UrlPattern;
-import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.BeforeAll;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInfo;
 import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.EnumSource;
-import org.testcontainers.containers.KafkaContainer;
-import org.testcontainers.containers.localstack.LocalStackContainer;
-import org.testcontainers.junit.jupiter.Container;
+import org.junit.jupiter.params.provider.ValueSource;
 import org.testcontainers.junit.jupiter.Testcontainers;
 
 @Testcontainers
-final class IntegrationTest implements IntegrationBase {
-    private static final String S3_ACCESS_KEY_ID = "test-key-id0";
-    private static final String S3_SECRET_ACCESS_KEY = "test_secret_key0";
-    private static final String TEST_BUCKET_NAME = "test-bucket0";
-
-    private static final String CONNECTOR_NAME = "aiven-s3-sink-connector";
-    private static final String COMMON_PREFIX = "s3-connector-for-apache-kafka-test-";
-    private static final int OFFSET_FLUSH_INTERVAL_MS = 5000;
-
-    private static String s3Endpoint;
-    private static String s3Prefix;
-    private static BucketAccessor testBucketAccessor;
-    private static File pluginDir;
-
-    @Container
-    public static final LocalStackContainer LOCALSTACK = IntegrationBase.createS3Container();
-    @Container
-    private static final KafkaContainer KAFKA = IntegrationBase.createKafkaContainer();
-    private AdminClient adminClient;
-    private KafkaProducer<byte[], byte[]> producer;
-    private ConnectRunner connectRunner;
-
-    @BeforeAll
-    static void setUpAll() throws IOException, InterruptedException {
-        s3Prefix = COMMON_PREFIX + ZonedDateTime.now().format(DateTimeFormatter.ISO_LOCAL_DATE_TIME) + "/";
-
-        final AmazonS3 s3Client = IntegrationBase.createS3Client(LOCALSTACK);
-        s3Endpoint = LOCALSTACK.getEndpoint().toString();
-        testBucketAccessor = new BucketAccessor(s3Client, TEST_BUCKET_NAME);
-
-        pluginDir = IntegrationBase.getPluginDir();
-        IntegrationBase.extractConnectorPlugin(pluginDir);
-
-        IntegrationBase.waitForRunningContainer(KAFKA);
-    }
-
-    @BeforeEach
-    void setUp(final TestInfo testInfo) throws ExecutionException, InterruptedException {
-        testBucketAccessor.createBucket();
-
-        adminClient = newAdminClient(KAFKA);
-        producer = newProducer();
-
-        final var topicName = IntegrationBase.topicName(testInfo);
-        final var topics = List.of(topicName);
-        IntegrationBase.createTopics(adminClient, topics);
-
-        connectRunner = newConnectRunner(KAFKA, pluginDir, OFFSET_FLUSH_INTERVAL_MS);
-        connectRunner.start();
-    }
-
-    @AfterEach
-    void tearDown() {
-        testBucketAccessor.removeBucket();
-        connectRunner.stop();
-        adminClient.close();
-        producer.close();
-
-        connectRunner.awaitStop();
-    }
+final class IntegrationTest extends AbstractIntegrationTest<byte[], byte[]> {
 
     @ParameterizedTest
-    @EnumSource(CompressionType.class)
-    void basicTest(final CompressionType compression, final TestInfo testInfo)
+    @ValueSource(strings = { "none", "gzip", "snappy", "zstd" })
+    void basicTest(final String compression, final TestInfo testInfo)
             throws ExecutionException, InterruptedException, IOException {
-        final var topicName = IntegrationBase.topicName(testInfo);
+        final var topicName = topicName(testInfo);
         final Map<String, String> connectorConfig = awsSpecificConfig(basicConnectorConfig(CONNECTOR_NAME), topicName);
         connectorConfig.put("format.output.fields", "key,value");
-        connectorConfig.put("file.compression.type", compression.name());
+        connectorConfig.put("file.compression.type", compression);
         connectorConfig.put("aws.s3.prefix", s3Prefix);
-        connectRunner.createConnector(connectorConfig);
+        createConnector(connectorConfig);
 
         final List<Future<RecordMetadata>> sendFutures = new ArrayList<>();
         final IndexesToString keyGen = (partition, epoch, currIdx) -> "key-" + currIdx;
@@ -167,7 +99,7 @@ final class IntegrationTest implements IntegrationBase {
         final Map<String, List<String>> blobContents = new HashMap<>();
         for (final String blobName : expectedBlobs) {
             blobContents.put(blobName,
-                    testBucketAccessor.readAndDecodeLines(blobName, compression, 0, 1)
+                    testBucketAccessor.readAndDecodeLines(blobName, CompressionType.forName(compression), 0, 1)
                             .stream()
                             .map(fields -> String.join(",", fields))
                             .collect(Collectors.toList()));
@@ -181,16 +113,16 @@ final class IntegrationTest implements IntegrationBase {
     }
 
     @ParameterizedTest
-    @EnumSource(CompressionType.class)
-    void groupByTimestampVariable(final CompressionType compression, final TestInfo testInfo)
+    @ValueSource(strings = { "none", "gzip", "snappy", "zstd" })
+    void groupByTimestampVariable(final String compression, final TestInfo testInfo)
             throws ExecutionException, InterruptedException, IOException {
-        final var topicName = IntegrationBase.topicName(testInfo);
+        final var topicName = topicName(testInfo);
         final Map<String, String> connectorConfig = awsSpecificConfig(basicConnectorConfig(CONNECTOR_NAME), topicName);
         connectorConfig.put("format.output.fields", "key,value");
-        connectorConfig.put("file.compression.type", compression.name());
+        connectorConfig.put("file.compression.type", compression);
         connectorConfig.put("file.name.template", s3Prefix + "{{topic}}-{{partition}}-{{start_offset}}-"
                 + "{{timestamp:unit=yyyy}}-{{timestamp:unit=MM}}-{{timestamp:unit=dd}}");
-        connectRunner.createConnector(connectorConfig);
+        createConnector(connectorConfig);
 
         final List<Future<RecordMetadata>> sendFutures = new ArrayList<>();
         sendFutures.add(sendMessageAsync(producer, topicName, 0, "key-0", "value-0"));
@@ -222,7 +154,8 @@ final class IntegrationTest implements IntegrationBase {
         }
 
         for (final String blobName : expectedBlobs) {
-            final List<String> blobContent = testBucketAccessor.readAndDecodeLines(blobName, compression, 0, 1)
+            final List<String> blobContent = testBucketAccessor
+                    .readAndDecodeLines(blobName, CompressionType.forName(compression), 0, 1)
                     .stream()
                     .map(fields -> String.join(",", fields))
                     .collect(Collectors.toList());
@@ -238,16 +171,16 @@ final class IntegrationTest implements IntegrationBase {
     }
 
     @ParameterizedTest
-    @EnumSource(CompressionType.class)
-    void oneFilePerRecordWithPlainValues(final CompressionType compression, final TestInfo testInfo)
+    @ValueSource(strings = { "none", "gzip", "snappy", "zstd" })
+    void oneFilePerRecordWithPlainValues(final String compression, final TestInfo testInfo)
             throws ExecutionException, InterruptedException, IOException {
-        final var topicName = IntegrationBase.topicName(testInfo);
+        final var topicName = topicName(testInfo);
         final Map<String, String> connectorConfig = awsSpecificConfig(basicConnectorConfig(CONNECTOR_NAME), topicName);
         connectorConfig.put("format.output.fields", "value");
-        connectorConfig.put("file.compression.type", compression.name());
+        connectorConfig.put("file.compression.type", compression);
         connectorConfig.put("format.output.fields.value.encoding", "none");
         connectorConfig.put("file.max.records", "1");
-        connectRunner.createConnector(connectorConfig);
+        createConnector(connectorConfig);
 
         final List<Future<RecordMetadata>> sendFutures = new ArrayList<>();
 
@@ -281,26 +214,27 @@ final class IntegrationTest implements IntegrationBase {
         }
 
         for (final Map.Entry<String, String> blobAndContentEntry : expectedBlobsAndContent.entrySet()) {
-            assertThat(testBucketAccessor.readLines(blobAndContentEntry.getKey(), compression).get(0))
-                    .isEqualTo(blobAndContentEntry.getValue());
+            assertThat(testBucketAccessor.readLines(blobAndContentEntry.getKey(), CompressionType.forName(compression))
+                    .get(0)).isEqualTo(blobAndContentEntry.getValue());
         }
 
     }
 
     @ParameterizedTest
-    @EnumSource(CompressionType.class)
-    void groupByKey(final CompressionType compression, final TestInfo testInfo)
+    @ValueSource(strings = { "none", "gzip", "snappy", "zstd" })
+    void groupByKey(final String compression, final TestInfo testInfo)
             throws ExecutionException, InterruptedException, IOException {
-        final var topicName0 = IntegrationBase.topicName(testInfo);
-        final var topicName1 = IntegrationBase.topicName(testInfo) + "_1";
-        IntegrationBase.createTopics(adminClient, List.of(topicName1));
+        final var topicName0 = topicName(testInfo);
+        final var topicName1 = topicName(testInfo) + "_1";
+        kafkaManager.createTopics(Arrays.asList(topicName0, topicName1));
         final Map<String, String> connectorConfig = awsSpecificConfig(basicConnectorConfig(CONNECTOR_NAME),
                 List.of(topicName0, topicName1));
+        final CompressionType compressionType = CompressionType.forName(compression);
         connectorConfig.put("key.converter", "org.apache.kafka.connect.storage.StringConverter");
         connectorConfig.put("format.output.fields", "key,value");
-        connectorConfig.put("file.compression.type", compression.name());
-        connectorConfig.put("file.name.template", s3Prefix + "{{key}}" + compression.extension());
-        connectRunner.createConnector(connectorConfig);
+        connectorConfig.put("file.compression.type", compression);
+        connectorConfig.put("file.name.template", s3Prefix + "{{key}}" + compressionType.extension());
+        createConnector(connectorConfig);
 
         final Map<TopicPartition, List<String>> keysPerTopicPartition = new HashMap<>();
         keysPerTopicPartition.put(new TopicPartition(topicName0, 0), Arrays.asList("key-0", "key-1", "key-2", "key-3"));
@@ -347,11 +281,12 @@ final class IntegrationTest implements IntegrationBase {
         }
 
         for (final String blobName : expectedBlobs) {
-            final String blobContent = testBucketAccessor.readAndDecodeLines(blobName, compression, 0, 1)
+            final String blobContent = testBucketAccessor
+                    .readAndDecodeLines(blobName, CompressionType.forName(compression), 0, 1)
                     .stream()
                     .map(fields -> String.join(",", fields))
                     .collect(Collectors.joining());
-            final String keyInBlobName = blobName.replace(s3Prefix, "").replace(compression.extension(), "");
+            final String keyInBlobName = blobName.replace(s3Prefix, "").replace(compressionType.extension(), "");
             final String value;
             final String expectedBlobContent;
             if ("null".equals(keyInBlobName)) {
@@ -367,18 +302,18 @@ final class IntegrationTest implements IntegrationBase {
 
     @Test
     void jsonlOutputTest(final TestInfo testInfo) throws ExecutionException, InterruptedException, IOException {
-        final var topicName = IntegrationBase.topicName(testInfo);
+        final var topicName = topicName(testInfo);
         final Map<String, String> connectorConfig = awsSpecificConfig(basicConnectorConfig(CONNECTOR_NAME), topicName);
-        final CompressionType compression = CompressionType.NONE;
+        final String compression = "none";
         final String contentType = "jsonl";
         connectorConfig.put("format.output.fields", "key,value");
         connectorConfig.put("format.output.fields.value.encoding", "none");
         connectorConfig.put("key.converter", "org.apache.kafka.connect.storage.StringConverter");
         connectorConfig.put("value.converter", "org.apache.kafka.connect.json.JsonConverter");
         connectorConfig.put("value.converter.schemas.enable", "false");
-        connectorConfig.put("file.compression.type", compression.name());
+        connectorConfig.put("file.compression.type", compression);
         connectorConfig.put("format.output.type", contentType);
-        connectRunner.createConnector(connectorConfig);
+        createConnector(connectorConfig);
 
         final List<Future<RecordMetadata>> sendFutures = new ArrayList<>();
         int cnt = 0;
@@ -409,7 +344,7 @@ final class IntegrationTest implements IntegrationBase {
         final Map<String, List<String>> blobContents = new HashMap<>();
         for (final String blobName : expectedBlobs) {
             final List<String> items = Collections
-                    .unmodifiableList(testBucketAccessor.readLines(blobName, compression));
+                    .unmodifiableList(testBucketAccessor.readLines(blobName, CompressionType.forName(compression)));
             blobContents.put(blobName, items);
         }
 
@@ -420,7 +355,7 @@ final class IntegrationTest implements IntegrationBase {
                 final String value = "[{" + "\"name\":\"user-" + cnt + "\"}]";
                 cnt += 1;
 
-                final String blobName = getNewBlobName(topicName, partition, 0, CompressionType.NONE);
+                final String blobName = getNewBlobName(topicName, partition, 0, "none");
                 final String expectedLine = "{\"value\":" + value + ",\"key\":\"" + key + "\"}";
 
                 assertThat(blobContents.get(blobName).get(i)).isEqualTo(expectedLine);
@@ -430,20 +365,20 @@ final class IntegrationTest implements IntegrationBase {
 
     @Test
     void jsonOutput(final TestInfo testInfo) throws ExecutionException, InterruptedException, IOException {
-        final var topicName = IntegrationBase.topicName(testInfo);
+        final var topicName = topicName(testInfo);
         final var faultyProxy = enableFaultyProxy(topicName);
         final Map<String, String> connectorConfig = awsSpecificConfig(basicConnectorConfig(CONNECTOR_NAME), topicName);
         connectorConfig.put("aws.s3.endpoint", faultyProxy.baseUrl());
-        final CompressionType compression = CompressionType.NONE;
+        final String compression = "none";
         final String contentType = "json";
         connectorConfig.put("format.output.fields", "key,value");
         connectorConfig.put("format.output.fields.value.encoding", "none");
         connectorConfig.put("key.converter", "org.apache.kafka.connect.storage.StringConverter");
         connectorConfig.put("value.converter", "org.apache.kafka.connect.json.JsonConverter");
         connectorConfig.put("value.converter.schemas.enable", "false");
-        connectorConfig.put("file.compression.type", compression.name());
+        connectorConfig.put("file.compression.type", compression);
         connectorConfig.put("format.output.type", contentType);
-        connectRunner.createConnector(connectorConfig);
+        createConnector(connectorConfig);
 
         final List<Future<RecordMetadata>> sendFutures = new ArrayList<>();
 
@@ -469,13 +404,12 @@ final class IntegrationTest implements IntegrationBase {
         final List<String> expectedBlobs = Arrays.asList(getNewBlobName(topicName, 0, 0, compression),
                 getNewBlobName(topicName, 1, 0, compression), getNewBlobName(topicName, 2, 0, compression),
                 getNewBlobName(topicName, 3, 0, compression));
-        for (final String blobName : expectedBlobs) {
-            assertThat(testBucketAccessor.doesObjectExist(blobName)).isTrue();
-        }
+
+        waitForStorage(Duration.ofMinutes(1), () -> testBucketAccessor.listObjects(), expectedBlobs);
 
         final Map<String, List<String>> blobContents = new HashMap<>();
         for (final String blobName : expectedBlobs) {
-            final List<String> items = testBucketAccessor.readLines(blobName, compression);
+            final List<String> items = testBucketAccessor.readLines(blobName, CompressionType.forName(compression));
             assertThat(items).hasSize(numEpochs + 2);
             blobContents.put(blobName, Collections.unmodifiableList(items));
         }
@@ -522,9 +456,10 @@ final class IntegrationTest implements IntegrationBase {
         return wireMockServer;
     }
 
-    private KafkaProducer<byte[], byte[]> newProducer() {
+    @Override
+    protected KafkaProducer<byte[], byte[]> newProducer() {
         final Map<String, Object> producerProps = new HashMap<>();
-        producerProps.put(ProducerConfig.BOOTSTRAP_SERVERS_CONFIG, KAFKA.getBootstrapServers());
+        producerProps.put(ProducerConfig.BOOTSTRAP_SERVERS_CONFIG, kafkaManager.bootstrapServers());
         producerProps.put(ProducerConfig.KEY_SERIALIZER_CLASS_CONFIG,
                 "org.apache.kafka.common.serialization.ByteArraySerializer");
         producerProps.put(ProducerConfig.VALUE_SERIALIZER_CLASS_CONFIG,
@@ -565,19 +500,19 @@ final class IntegrationTest implements IntegrationBase {
 
     // WARN: different from GCS
     private String getOldBlobName(final String topicName, final int partition, final int startOffset,
-            final CompressionType compression) {
+            final String compression) {
         final String result = String.format("%s%s-%d-%020d", s3Prefix, topicName, partition, startOffset);
-        return result + compression.extension();
+        return result + CompressionType.forName(compression).extension();
     }
 
     private String getNewBlobName(final String topicName, final int partition, final int startOffset,
-            final CompressionType compression) {
+            final String compression) {
         final String result = String.format("%s-%d-%d", topicName, partition, startOffset);
-        return result + compression.extension();
+        return result + CompressionType.forName(compression).extension();
     }
 
-    private String getKeyBlobName(final String key, final CompressionType compression) {
+    private String getKeyBlobName(final String key, final String compression) {
         final String result = String.format("%s%s", s3Prefix, key);
-        return result + compression.extension();
+        return result + CompressionType.forName(compression).extension();
     }
 }
